added screen color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Irfan Khan Personal Web Site</title>
+
+    <style>
+      body {
+        background-color: #ecf4f3;
+      }
+      hr {
+        border-style: none;
+        border-top-style: dotted;
+        border-color: grey;
+        border-width" 5px;
+        width: 30%;
+      }
+    </style>
   </head>
   <body>
     <table cellspacing="20">
@@ -17,10 +30,7 @@
         </td>
       </tr>
     </table>
-
-
-
-    <hr size="4" noshade>
+    <hr>
     <h3>Book and Teaching</h3>
     <ul>
       <li>Java Programming</li>
