--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <style>
       body {
-        background-color: #ecf4f3;
+        background-color: #Fcf4f3;
       }
       hr {
         border-style: none;
